delete the admin button

--- a/iframe.html
+++ b/iframe.html
@@ -16,7 +16,7 @@
 		<div class="pc-user">
 <!-- 前面内容是为了在PC现实中包在一个手机框内 -->
 <!-- 主要页面内容区域 -->
-		<iframe src="./index.html" frameborder="0" style="width: 100%; height: 100%;"></iframe>
+		<iframe src="./" frameborder="0" style="width: 100%; height: 100%;"></iframe>
 <!-- 主要页面内容区域 End  -->
 		</div>
 		<div class="pc-warnning">
